# LibMultiSockets

./: CMakeLists.txt  LICENSE
include/: multisockets.h
src/: multisockets.c
